--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@tailwindcss/postcss": "^4.1.16",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.548.0",
     "next": "15.5.4",
@@ -26,8 +27,11 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "24.9.1",
     "@types/react": "19.2.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "typescript": "5.9.3"
   }
 }
