--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/postcss": "^4.1.16",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
@@ -26,6 +27,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.3.0",
     "sonner": "2.0.3",
