--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/postcss": "^4.1.16",
     "class-variance-authority": "^0.7.1",
@@ -20,7 +21,9 @@
     "dompurify": "^3.3.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
+    "motion": "^12.23.25",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
