--- a/package.json
+++ b/package.json
@@ -14,26 +14,25 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@react-oauth/google": "^0.12.2",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.3.1",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/postcss": "^4.1.16",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
-    "dompurify": "^3.3.0",
+    "dompurify": "^3.3.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.25",
-    "next": "15.5.4",
+    "next": "15.5.9",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-pdf": "^10.2.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.3.0",
