--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.3.0",
-    "sonner": "2.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
